--- a/style.css
+++ b/style.css
@@ -1,7 +1,9 @@
+/* IN THE NAME OF RAINBOW GOD :D */
+
+
 body {
     background-color: #E9E9E9;
 }
-
 section {
     width: 1200px;
     height: 700px;
