--- a/noteBook1/noteBook.css
+++ b/noteBook1/noteBook.css
@@ -1,10 +1,9 @@
 main {
     display: flex;
-    justify-content: center;
-    background-color: aqua;
+    background-color: #fff;
     width: 1200px;
-    height: 1200px;
-    border: 1px, solid, #000;
+    height: 800px;
+    border-style: double;
     margin: 10px auto;
     font-family: Arial, Helvetica, sans-serif;
 }
@@ -12,107 +11,137 @@ main {
 #left ,#right {
     margin: 5px;
     width: 49%;
-    /* justify-content: center; */
 }
 
-#left {
-    background-color: #fff;
-    /* justify-content: center; */
-}
+
 #left > Header,h1,.searchbox,.savedNote{
     width: 95%;
     margin: 10px auto;
 }
 
-header > div {
-    background-color: blue;
-    display: flex;
+Header {
     justify-content: space-between;
-    opacity: 0.3;
+    display: flex;
 }
 
-header > div > img {
+Header > div {
+    opacity: 0.5;
+    width: 15%;
+}
+
+Header > div > img {
     margin: 10px;
-    width: 5%;
+    width: 50%;
 }
 
 .searchbox {
-    background-color: rgb(195, 188, 188);
+    background-color: rgb(228, 224, 224);
     width: 95%;
     display: flex;
-    /* justify-content: center; */
+    justify-content: space-between;
+    align-items: center;
+    border-radius: 10px;
 }
 
 .searchbox > input {
+    outline: none;
+    display: block;
     border: none;
-    background-color: rgb(237, 15, 137);
-    padding: 15px 300px 15px 10px;
+    background-color: rgb(228, 224, 224);
+    padding: 15px 10px;
+    border-radius: 5px;
 }
 
 .searchbox > img {
-    width: 5%;
-    float:right ;
+    width: 4%;
+    height: 10%;
+    margin-right: 10px;
 }
 
-#left > .savedNote > div{
-    /* background-image: url(Images/paper.jpg); */
-    background-size: cover;
+#left > .savedNote {
+    margin-top: 20px;
+}
+
+#left > .savedNote > .savedNote1{
+    height: 150px;
     margin-bottom: 20px;
-    background-color: #000;
-    border: solid 2px #000;
+    background-color: rgb(152, 225, 129);
+    border-radius: 10px;
 }
 
-#left > .savedNote > div > input{
-    background-color: #fff;
-    padding-top: 50px; 
-    margin: 10px 0 0 0;
-    width: 99%;
-    /* border: none; */
+#left > .savedNote > .savedNote2{
+    height: 150px;
+    margin-bottom: 20px;
+    background-color: rgb(250, 199, 145);
+    border-radius: 10px;
 }
 
-/* ////////////////////////////////////////////////// */
-
-.firstNote, .secondNote {
-    width: 100%;
-    background-color: #fff;
-    height: 49%;
-    margin-bottom: 25px;
+#right > .firstNote,.secondNote {
+    height: 40%;
+    margin-bottom: 50px;
 } 
 
-.firstNote > .firstNoteHeader {
-    width: 100%;
-    background-color: bisque;
+#right > .firstNote > .firstNoteHeader {
+    width: 93%;
+    background-color: rgb(140, 250, 106);
+    margin-top: 20px;
+    padding: 0 20px;
+    justify-content: space-between;
+    display: flex;
 }
 
-.firstNoteMain {
-    background-color: rgb(223, 48, 48);
+#right > .firstNote > .firstNoteHeader > div {
+    opacity: 0.5;
+    width: 15%;
+}
+
+#right > .firstNote > .firstNoteHeader > div > img {
+    margin: 10px;
+    width: 50%;
+}
+
+#right > .firstNote > .firstNoteMain {
+    background-color: rgb(152, 225, 129);
     width: 100%;
-    height: 80%;
+    height: 70%;
+    margin-top: 0;
 }
 
 .firstNoteMain > p {
     margin: 10px 20px;
 }
 
-.firstNoteFooter {
+#right > .firstNote > .firstNoteFooter  {
     border-top: 1px solid #000;
     height: 15%;
-    background-color: blue;
+    background-color: rgb(152, 225, 129);
 }
 
 .secondNote > .secondNoteHeader {
-    width: 100%;
-    background-color: bisque;
+    width: 93%;
+    background-color: rgb(255, 183, 106);
+    margin-top: 20px;
+    padding: 0 20px;
     opacity: 0;
-    /* transition: all 0.5s; */
+    justify-content: space-between;
+    display: flex;
+}
+
+#right > .secondNote > .secondNoteHeader > div {
+    opacity: 0.5;
+    width: 15%;
+}
+
+#right > .secondNote > .secondNoteHeader > div > img {
+    margin: 10px;
+    width: 50%;
 }
 
 .secondNoteMain {
-    background-color: rgb(223, 48, 48);
+    background-color: rgb(250, 199, 145);
     width: 100%;
     height: 80%;
     opacity: 1;
-    /* transition: all 0.5s; */
 }
 
 .secondNoteMain > p {
@@ -122,9 +151,8 @@ header > div > img {
 .secondNoteFooter {
     border-top: 1px solid #000;
     height: 15%;
-    background-color: blue;
+    background-color: rgb(250, 199, 145);
     opacity: 0;
-    /* transition: all 0.5s; */
 }
 
 .secondNote:hover > .secondNoteFooter {
