--- a/sicky note/note.css
+++ b/sicky note/note.css
@@ -18,7 +18,14 @@ body {
     margin-top: 20px;
     margin-left: 5%;
 }
-
+#create-note{
+    background-color: rgb(43, 227, 77);
+    padding: 15px 25px;
+    border-radius: 5px;
+    border: none;
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px, rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
+    outline: none;
+}
 .container2 {
     display: flex;
     justify-content: flex-start;
@@ -28,12 +35,21 @@ body {
 }
 
 .container3 {
-    /* display: none; */
+    display: none;
     position: absolute;
     top: 26%;
     left: 40%;
 }
-
+.note{
+    display: inline-block;
+    width:250px;
+    height:250px;
+    font-size:26px;
+    padding:25px;
+    margin-top:10px;
+    overflow:hidden;
+    box-shadow: 0px 10px 24px 0px rgba(0,0,0,0.75)
+}
 textarea{
     box-shadow: 10px 10px 24px 0px rgba(0,0,0,0.75);
     outline: none;
