--- a/sicky note/note.css
+++ b/sicky note/note.css
@@ -4,7 +4,7 @@
 }
 
 body {
-    background-color: #c68c53a8;
+    background-color: #e1ccb7a8;
     font-family: "Architects Daughter";
     font-size: 24px;
 }
@@ -18,27 +18,134 @@ body {
     margin-top: 20px;
     margin-left: 5%;
 }
-#create-note{
-    background-color: rgb(43, 227, 77);
-    padding: 15px 25px;
-    border-radius: 5px;
-    border: none;
-    box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px, rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
-    outline: none;
+.btn-12,
+.btn-12 *,
+.btn-12 :after,
+.btn-12 :before,
+.btn-12:after,
+.btn-12:before {
+  border: 0 solid;
+  box-sizing: border-box;
 }
+
+.btn-12 {
+  -webkit-tap-highlight-color: transparent;
+  -webkit-appearance: button;
+  background-color: #000;
+  background-image: none;
+  color: #fff;
+  cursor: pointer;
+  font-family: ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont,
+    Segoe UI, Roboto, Helvetica Neue, Arial, Noto Sans, sans-serif,
+    Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol, Noto Color Emoji;
+  font-size: 100%;
+  font-weight: 900;
+  line-height: 1.5;
+  margin: 0;
+  -webkit-mask-image: -webkit-radial-gradient(#000, #fff);
+  padding: 0;
+  text-transform: uppercase;
+}
+
+.btn-12:disabled {
+  cursor: default;
+}
+
+.btn-12:-moz-focusring {
+  outline: auto;
+}
+
+.btn-12 svg {
+  display: block;
+  vertical-align: middle;
+}
+
+.btn-12 [hidden] {
+  display: none;
+}
+
+.btn-12 {
+  border-radius: 99rem;
+  border-width: 2px;
+  overflow: hidden;
+  padding: 0.8rem 3rem;
+  position: relative;
+}
+
+.btn-12 span {
+  mix-blend-mode: difference;
+}
+
+.btn-12:after,
+.btn-12:before {
+  background: linear-gradient(
+    90deg,
+    #fff 25%,
+    transparent 0,
+    transparent 50%,
+    #fff 0,
+    #fff 75%,
+    transparent 0
+  );
+  content: "";
+  inset: 0;
+  position: absolute;
+  transform: translateY(var(--progress, 100%));
+  transition: transform 0.2s ease;
+}
+
+.btn-12:after {
+   
+  --progress: -100%;
+  background: linear-gradient(
+    90deg,
+    transparent 0,
+    transparent 25%,
+    #fff 0,
+    #fff 50%,
+    transparent 0,
+    transparent 75%,
+    #fff 0
+  );
+  z-index: -1;
+}
+
+.btn-12:hover:after,
+.btn-12:hover:before {
+  --progress: 0;
+}
+
 .container2 {
-    display: flex;
-    justify-content: flex-start;
-    flex-wrap: wrap;
+   
     margin-top: 20px;
     margin-left: 5%;
 }
+.container2 ul li{
+    position: relative;
+    border-radius: 7px;
+}
+span{
+    line-break: anywhere;
+}
+.container2 h3{
+    text-align: center;
+}
 
+.container3 form{
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    flex-wrap: wrap;
+    
+}
 .container3 {
     display: none;
     position: absolute;
     top: 26%;
     left: 40%;
+    box-shadow: 10px 10px 24px 0px rgba(0,0,0,0.75);
+    background-color: #fff;
+    border-radius: 7px;
 }
 .note{
     display: inline-block;
@@ -51,26 +158,93 @@ body {
     box-shadow: 0px 10px 24px 0px rgba(0,0,0,0.75)
 }
 textarea{
-    box-shadow: 10px 10px 24px 0px rgba(0,0,0,0.75);
     outline: none;
     border: none;
-    width: 275px;
-    height: 275px;
-    padding: 40px 25px 25px 25px;
+    width: 260px;
+    height: 260px;
+    padding: 10px;
+    border-radius: 7px;
 }
-
+input{
+    padding: 10px;
+    width: 75%;
+    border: none;
+    outline: none;
+    border-radius: 7px;
+}
 svg {
     color: gray;
 }
 
 #check-icon {
     position:absolute;
-    right: 12%;
+    right: 14%;
     top: 4%;
+    cursor: pointer;
 }
 
 #x-icon {
     position:absolute;
     right: 5%;
     top: 4%;
+    cursor: pointer;
 }
+
+.removeBtn{
+    width: 30px;
+    height: 30px;
+    border-radius: 50%;
+    background-color: rgb(20, 20, 20);
+    border: none;
+    font-weight: 600;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.164);
+    cursor: pointer;
+    transition-duration: .3s;
+    overflow: hidden;
+    position: relative;
+    position: absolute;
+    bottom: 0px;
+    right: 10%;
+}
+  
+  .svgIcon {
+    width: 10px;
+    transition-duration: .3s;
+  }
+  
+  .svgIcon path {
+    fill: white;
+  }
+  
+  .removeBtn:hover {
+    width: 100px;
+    border-radius: 50px;
+    transition-duration: .3s;
+    background-color: rgb(255, 69, 69);
+    align-items: center;
+  }
+  
+  .removeBtn:hover .svgIcon {
+    width: 10px;
+    transition-duration: .3s;
+    transform: translateY(60%);
+  }
+  
+  .removeBtn::before {
+    position: absolute;
+    top: -5px;
+    content: "Delete";
+    color: white;
+    transition-duration: .3s;
+    font-size: 2px;
+  }
+  
+  .removeBtn:hover::before {
+    font-size: 7px;
+    opacity: 1;
+    transform: translateY(10px);
+    transition-duration: .3s;
+  }
